# flexnet-gx

./: README.md  enhanced-flexnet-gx-setup-script.sh  flexnet-gx-setup-readme.md
flexnet-gx-blockchain/: Cargo.toml
flexnet-gx-blockchain/src/: lib.rs
flexnet-gx-lambda/: Cargo.toml  build-lambda.sh
flexnet-gx-lambda/src/: main.rs
flexnet-gx-mobile/: Cargo.toml  build-android.sh  build-ios.sh
flexnet-gx-mobile/src/: main.rs
flexnet-gx-web/: Cargo.toml  build.sh  index.html
flexnet-gx-web/src/: lib.rs
