[package]
name = "flexnet-gx-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.9"
borsh-derive = "0.9"
spl-token = { version = "3.3", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
