[package]
name = "flexnet-gx-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
aes-gcm = "0.9"
sha2 = "0.9"
hex = "0.4"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
