[package]
name = "flexnet-gx-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.3"
dioxus-mobile = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
aes-gcm = "0.9"
sha2 = "0.9"
hex = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-graphics = "0.22"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flexnet-gx-mobile"
path = "src/main.rs"
