[package]
name = "flexnet-gx-web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
aes-gcm = "0.9"
sha2 = "0.9"
hex = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
